--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,7 +9,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
         crossorigin="anonymous">
   <link rel="icon" href="{% static 'images/logo.svg' %}" type="image/x-icon">
-  <title>{% block title %}Главная{% endblock %} - textee</title>
+  <title>{% block title %}Главная{% endblock %} | Textee</title>
 </head>
 <body>
   <header>
@@ -53,14 +53,16 @@
             </li>
           </ul>
           <div class="d-flex">
-            <a class="p-2 text-dark" href="#">Log In</a>
-            <a class="btn btn-outline-primary" href="#">Sign Up</a>
+            <a class="p-2 text-dark" href="#">Войти</a>
+            <a class="btn btn-outline-primary" href="{% url 'account_signup' %}">
+              Зарегистрироваться
+            </a>
           </div>
         </div>
       </div>
     </nav>
   </header>
-  <div class="container">
+  <div class="container my-4">
     {% block content %}
     {% endblock %}
   </div>
