--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -53,7 +53,7 @@
             </li>
           </ul>
           <div class="d-flex">
-            <a class="p-2 text-dark" href="#">Войти</a>
+            <a class="p-2 text-dark" href="{% url 'account_login' %}">Войти</a>
             <a class="btn btn-outline-primary" href="{% url 'account_signup' %}">
               Зарегистрироваться
             </a>
