Add a user display in the base template

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,13 +9,14 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
         crossorigin="anonymous">
   <link rel="icon" href="{% static 'images/logo.svg' %}" type="image/x-icon">
+  {% block extra_head %}{% endblock %}
   <title>{% block title %}Главная{% endblock %} | Textee</title>
 </head>
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #F0E68C;">
       <div class="container">
-        <a class="navbar-brand" href="#">Textee
+        <a class="navbar-brand" href="{% url 'index' %}">Textee
           <img src="{% static 'images/logo.svg' %}" alt="logo" width="32"
                height="32" class="d-inline-block align-text-top">
         </a>
@@ -33,31 +34,34 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
-                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </li>
             <li class="nav-item">
               <a class="nav-link disabled">Disabled</a>
             </li>
           </ul>
-          <div class="d-flex">
-            <a class="p-2 text-dark" href="{% url 'account_login' %}">Войти</a>
-            <a class="btn btn-outline-primary" href="{% url 'account_signup' %}">
-              Зарегистрироваться
-            </a>
-          </div>
+          {% if request.user.is_authenticated %}
+            <div class="d-flex dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                {{ request.user.username }}
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="#">Профиль</a></li>
+                <li><a class="dropdown-item" href="#">Настройки</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item text-danger" href="{% url 'account_logout' %}">Выйти</a>
+                </li>
+              </ul>
+            </div>
+          {% else %}
+            <div class="d-flex">
+              <a class="p-2 text-dark" href="{% url 'account_login' %}">Войти</a>
+              <a class="btn btn-outline-primary" href="{% url 'account_signup' %}">
+                Зарегистрироваться
+              </a>
+            </div>
+          {% endif %}
         </div>
       </div>
     </nav>
