--- a/src/textee/templates/textee/detail.html
+++ b/src/textee/templates/textee/detail.html
@@ -10,9 +10,51 @@
 {% block title %}{{ snippet.title }}{% endblock %}
 
 {% block content %}
-  {{ snippet.code }}
-
+  <h2>{{ snippet.title }}</h2>
+  <p class="text-muted">
+    {% if snippet.owner %}
+      <span class="p-1" title="Автор текста">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+          <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+        </svg>
+        {{ snippet.owner.username }}
+      </span>
+    {% endif %}
+    <span class="p-1" title="Создан">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-calendar" viewBox="0 0 16 16">
+        <path d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5zM1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4H1z"/>
+      </svg>
+      {{ snippet.created|date:'j M Y' }}
+    </span>
+    <span title="Время, через которое этот сниппет будет удалён">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-stopwatch" viewBox="0 0 16 16">
+        <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5V5.6z"/>
+        <path d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64a.715.715 0 0 1 .012-.013l.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354a.512.512 0 0 1-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5zM8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3z"/>
+      </svg>
+      {% if snippet.expiration %}
+        {{ snippet.expiration|timeuntil }}
+      {% else %}
+        Никогда
+      {% endif %}
+    </span>
+  </p>
   {% if highlighted_code %}
-    {{ highlighted_code|safe }}
+    <div class="card mb-4">
+      <div class="card-header bg-success bg-opacity-50">
+        Синтаксис: <span class="fw-bold">{{ snippet.syntax }}</span>
+      </div>
+      <div class="card-body bg-light">
+        {{ highlighted_code|safe }}
+      </div>
+    </div>
   {% endif %}
+
+  <div class="card">
+    <div class="card-header bg-warning p-2 text-dark bg-opacity-50">
+      Исходный текст
+    </div>
+    <div class="card-body bg-light">
+      <pre>{{ snippet.code }}</pre>
+    </div>
+  </div>
 {% endblock %}
