Fix the heading so that the long word is transferred to the next line

--- a/src/textee/templates/textee/detail.html
+++ b/src/textee/templates/textee/detail.html
@@ -10,7 +10,7 @@
 {% block title %}{{ snippet.title }}{% endblock %}
 
 {% block content %}
-  <h2>{{ snippet.title }}</h2>
+  <h1 class="fs-3 text-break">{{ snippet.title }}</h1>
   <p class="text-muted">
     {% if snippet.owner %}
       <span class="p-1" title="Автор текста">
