--- a/src/templates/account/login.html
+++ b/src/templates/account/login.html
@@ -16,7 +16,7 @@
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
         {% endif %}
         <div class="text-center">
-          <a class="button secondaryAction" href="{% url 'account_reset_password' %}">Забыли пароль?</a>
+          <a class="button secondaryAction me-2" href="{% url 'account_reset_password' %}">Забыли пароль?</a>
           <button class="btn btn-success primaryAction" type="submit">Войти</button>
         </div>
       </form>
