--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,6 +9,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
         crossorigin="anonymous">
   <link rel="icon" href="{% static 'images/logo.svg' %}" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
   {% block extra_head %}{% endblock %}
   <title>{% block title %}Главная{% endblock %} | Textee</title>
 </head>
@@ -26,27 +27,17 @@
                 aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
-          </ul>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
           {% if request.user.is_authenticated %}
-            <div class="d-flex dropdown">
+            <div class="dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
                  role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 {{ request.user.username }}
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Профиль</a></li>
-                <li><a class="dropdown-item" href="#">Настройки</a></li>
+                <li><a class="dropdown-item" href="{% url 'profile' request.user.username %}">Профиль</a></li>
+                <li><a class="dropdown-item" href="{% url 'account_email' %}">Настроить e-mail</a></li>
+                <li><a class="dropdown-item" href="{% url 'account_change_password' %}">Сменить пароль</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
