--- a/src/textee/templates/textee/index.html
+++ b/src/textee/templates/textee/index.html
@@ -8,6 +8,8 @@
   <form action="{% url 'index' %}" method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button class="btn btn-success" type="submit">Создать</button>
+    <button class="btn btn-success" type="submit">
+      <i class="bi bi-check2-square"></i> Создать
+    </button>
   </form>
 {% endblock %}
