--- a/src/textee/templates/textee/detail.html
+++ b/src/textee/templates/textee/detail.html
@@ -15,7 +15,8 @@
   <p class="text-muted">
     {% if snippet.owner %}
       <span class="me-2" title="Автор текста">
-        <i class="bi bi-person fs-5"></i> {{ snippet.owner.username }}
+        <i class="bi bi-person fs-5"></i>
+        <a href="{{ snippet.owner.get_absolute_url }}">{{ snippet.owner.username }}</a>
       </span>
     {% endif %}
     <span class="me-2" title="Создан">
