Fix highlighted code display

--- a/src/textee/templates/textee/detail.html
+++ b/src/textee/templates/textee/detail.html
@@ -37,7 +37,7 @@
       <div class="card-header bg-success bg-opacity-50">
         Синтаксис: <span class="fw-bold">{{ snippet.syntax }}</span>
       </div>
-      <div class="card-body bg-light">
+      <div class="card-body bg-light table-responsive">
         {{ highlighted_code|safe }}
       </div>
     </div>
