--- a/src/static/css/syntax_highlight.css
+++ b/src/static/css/syntax_highlight.css
@@ -1,7 +1,7 @@
-pre { line-height: 125%; }
+pre { line-height: 125%;}
 td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
+span.normal::after { content: ".";}
 span.linenos { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
-span.linenos::after {content: ".";}
 td.linenos .special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
 span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 5px; padding-right: 5px; }
 .highlight .hll { background-color: #ffffcc }
