--- a/src/textee/templates/textee/index.html
+++ b/src/textee/templates/textee/index.html
@@ -5,11 +5,5 @@
 {% block title %}Главная{% endblock %}
 
 {% block content %}
-  <form action="{% url 'index' %}" method="post">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button class="btn btn-success" type="submit">
-      <i class="bi bi-check2-square"></i> Создать
-    </button>
-  </form>
+  {% crispy form %}
 {% endblock %}
