--- a/src/textee/templates/textee/snippet_detail.html
+++ b/src/textee/templates/textee/snippet_detail.html
@@ -34,18 +34,20 @@
         </span>
       </p>
     </div>
-    <div class="col-auto pe-0">
-      <a class="btn btn-outline-warning btn-sm"
-         href="{% url 'snippet_edit' snippet.url %}" role="button">
-        Редактировать
-      </a>
-    </div>
-    <div class="col-auto">
-      <form action="{% url 'snippet_delete' snippet.url %}" method="post">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-outline-danger btn-sm">Удалить</button>
-      </form>
-    </div>
+    {% if request.user.is_authenticated %}
+      <div class="col-auto pe-0">
+        <a class="btn btn-outline-warning btn-sm"
+           href="{% url 'snippet_edit' snippet.url %}" role="button">
+          Редактировать
+        </a>
+      </div>
+      <div class="col-auto">
+        <form action="{% url 'snippet_delete' snippet.url %}" method="post">
+          {% csrf_token %}
+          <button type="submit" class="btn btn-outline-danger btn-sm">Удалить</button>
+        </form>
+      </div>
+    {% endif %}
   </div>
 
   {% if highlighted_code %}
